# Agent-loop

./: .env.openrouter.example  .gitignore  PROJECT_OVERVIEW.md  README.md  pyproject.toml
artifacts/: demo.txt
examples/: file_task.json  real_task_openrouter_activation.json  real_task_project_inventory.json  real_task_smoke_digest.json  real_task_smoke_report.json  real_task_smoke_test.json  real_task_test_inventory.json
reports/: openrouter_activation_note.md  project_inventory.md  smoke_digest.md  smoke_report.md  test_inventory.md
src/agent_loop/: __init__.py  api.py  benchmarks.py  cli.py  models.py  service.py  settings.py  vector.py
src/agent_loop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_interfaces.py  test_service.py
